--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "## Note Taker To finish this Note Taker app, I connected the back end to the front end coding to make the app usable for users. I started with creating the server.js file, which comprised of pointing the server to correct routes and making sure that the app was directed to the correct port as well. After setting up the server.js file, I worked on the apiRoutes and htmlRoutes to make sure that the correct information was visible from the front end side. The last thing that I did was make sure that there was a file for the note data to be saved on and made sure that the user would be able to see that on the front end side of the app.",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.4"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ebeltz/note-taker.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/ebeltz/note-taker/issues"
   },
-  "homepage": "https://github.com/ebeltz/note-taker#readme",
-  "dependencies": {
-    "express": "^4.17.2",
-    "jest": "^27.4.7",
-    "uuid": "^8.3.2",
-    "uuidv4": "^6.2.12"
-  }
+  "homepage": "https://github.com/ebeltz/note-taker#readme"
 }
